--- a/style.css
+++ b/style.css
@@ -4,14 +4,15 @@
 }
 
 body {
-    height: 100%;
+    height: 700px;
     background-color: #333333;
 }
 
 h1 {
     text-align: center;
     color: white;
-    padding-bottom: 10px;
+    padding-bottom: 60px;
+    padding-top: 40px;
 }
 
 .imagem {
@@ -20,17 +21,20 @@ h1 {
 }
 
 #resultado {
-    width: 266px;
-    height: 133px;
 }
 
 label {
     color: #EE394E;
     font-weight: bold;
+    font-size: 26px;
+}
+
+#alcool, #gasolina {
+    height: 30px;
 }
 
 #digitapreco {
-    padding: 20px 0px;
+    padding: 30px 0px;
     display: flex;  
 }
 
@@ -41,7 +45,12 @@ label {
 }
 
 .botao {
-    margin-top: 15px;
+    margin-top: 40px;
     display: flex;
     justify-content: center;
+}
+
+#botao {
+    height: 40px;
+    width: 100px;
 }
